--- a/src/scss/osbTvFilmGuide.scss
+++ b/src/scss/osbTvFilmGuide.scss
@@ -1,135 +1,4 @@
-$favouritesCol: #E800DC;
-
-.filmTvGuide {
-  width: 100%;
-
-  &__listings {
-    position: relative;
-
-    .favouriteBtn:hover {
-      color: $favouritesCol;
-
-      > i {
-        color: $favouritesCol;
-      }
-    }
-
-    .favouriteActive {
-      color: $favouritesCol;
-
-      > i {
-        color: $favouritesCol;
-      }
-    }
-
-    .watchedBtn:hover {
-      color: #00AAF2;
-
-      > i {
-        color: #00AAF2;
-      }
-    }
-
-    .watchedActive {
-      color: #00AAF2;
-
-      > i {
-        color: #00AAF2;
-      }
-    }
-
-    .infoBtn:hover {
-      color: #3B62FF;
-    }
-
-    > ul li {
-      position: relative;
-      margin-bottom: 20px;
-
-      .filmTvGuide__listings--nav {
-        width: 90%;
-        min-height: 50px;
-        position: absolute;
-        top: 0;
-        left: 50%;
-        margin-left: -45%;
-        background-color: rgba(0, 0, 0, 0.7);
-        opacity: 0;
-        -webkit-transition: opacity 0.5s;
-        transition: opacity 0.5s;
-
-        > a {
-          font-size: 30px;
-          color: #FFF;
-          position: relative;
-          top: 10px;
-          margin-right: 10px;
-          float: right;
-        }
-      }
-
-      > h2 {
-        position: absolute;
-        top: 0;
-        left: 0;
-      }
-    }
-
-    > ul li:hover {
-      .filmTvGuide__listings--nav {
-        opacity: 1;
-      }
-    }
-  }
-
-  &__modal {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    background: #000;
-
-    .img-responsive {
-      margin-top: 20px;
-    }
-
-    &--closeBtn {
-      width: 30px;
-      height: 30px;
-      position: absolute;
-      top: -15px;
-      right: -15px;
-      background: #000;
-      border-radius: 50%;
-      border: 3px solid #fff;
-      z-index: 2;
-
-      > i {
-        font-size: 21px;
-        color: #FFF;
-        position: relative;
-        left: 4px;
-        top: 1px;
-      }
-    }
-
-    > img {
-      width: 100%;
-      height: auto;
-      opacity: 0.4;
-    }
-
-    &--content {
-      width: 80%;
-      position: absolute;
-      top: 30px;
-      left: 50%;
-      margin-left: -40%;
-      background: #FFF;
-      color: #000;
-      padding-bottom: 20px;
-      z-index: 1;
-    }
-  }
-}
+@import 'theme/base';
+@import 'theme/colours';
+@import 'modules/listings';
+@import 'modules/modal';
