--- a/src/scss/theme/colours.scss
+++ b/src/scss/theme/colours.scss
@@ -2,3 +2,6 @@ $color-white:         #FFF;
 $color-black:         #000;
 $purple-pizzazz:      #E800DC;
 $cerulean:            #00AAF2;
+$azure-radiance:      #0285E3;
+$endeavour:           #0065AD;
+$prussian-blue:       #002A47;
