--- a/src/css/osbTvFilmGuide.css
+++ b/src/css/osbTvFilmGuide.css
@@ -76,10 +76,11 @@
 .filmTvGuide__modal {
   width: 100%;
   height: 100%;
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
-  background: #000; }
+  background: #000;
+  overflow-y: scroll; }
   .filmTvGuide__modal .img-responsive {
     margin-top: 20px; }
   .filmTvGuide__modal--closeBtn {
