--- a/src/scss/modules/modal.scss
+++ b/src/scss/modules/modal.scss
@@ -1,10 +1,11 @@
 .filmTvGuide__modal {
   width: 100%;
   height: 100%;
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   background: $color-black;
+  overflow-y: scroll;
 
   .img-responsive {
     margin-top: 20px;
