--- a/src/scss/modules/listings.scss
+++ b/src/scss/modules/listings.scss
@@ -52,6 +52,7 @@
     box-sizing: border-box;
     -webkit-flex: 1 1 33.333%;
     flex: 1 1 33.333%;
+    background-color: $color-black;
 
     .filmTvGuide__listings--nav {
       width: 100%;
