--- a/src/scss/osbTvFilmGuide.scss
+++ b/src/scss/osbTvFilmGuide.scss
@@ -2,5 +2,6 @@
 @import 'theme/base';
 @import 'theme/colours';
 @import 'theme/buttons';
+@import 'modules/loader';
 @import 'modules/listings';
 @import 'modules/modal';
